add map section

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
     </section>
     <!-- Features/ -->
     <!-- Subscribe_plan -->
-    <div class="container">
-      <div class="plan">
+    <section class="plan">
+      <div class="container plan__container">
         <h1 class="plan__title">Choose Your Plan</h1>
         <p class="plan__desc">
           Let's choose the package that is best for you and explore it happily
@@ -171,76 +171,116 @@
         </p>
         <div class="plan__var">
           <div class="plan-item">
-            <img src="iamges/plan_item.svg" alt="plan_box">
+            <img src="iamges/plan_item.svg" alt="plan_box" />
             <h2 class="item__name">Free Plan</h2>
             <ul class="item__list">
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Unlimited Bandwitch
+                <img src="iamges/plan_check.svg" alt="plan_check" />Unlimited
+                Bandwitch
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Encrypted Connection
+                <img src="iamges/plan_check.svg" alt="plan_check" />Encrypted
+                Connection
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">No Traffic Logs
+                <img src="iamges/plan_check.svg" alt="plan_check" />No Traffic
+                Logs
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Works on All Devices
+                <img src="iamges/plan_check.svg" alt="plan_check" />Works on All
+                Devices
               </li>
             </ul>
             <p class="item__price">Free</p>
             <button type="button" class="btn-plan">Select</button>
           </div>
           <div class="plan-item">
-            <img src="iamges/plan_item.svg" alt="plan_box">
+            <img src="iamges/plan_item.svg" alt="plan_box" />
             <h2 class="item__name">Standard Plan</h2>
             <ul class="item__list">
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Unlimited Bandwitch
+                <img src="iamges/plan_check.svg" alt="plan_check" />Unlimited
+                Bandwitch
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Encrypted Connection
+                <img src="iamges/plan_check.svg" alt="plan_check" />Encrypted
+                Connection
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Yes Traffic Logs
+                <img src="iamges/plan_check.svg" alt="plan_check" />Yes Traffic
+                Logs
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Works on All Devices
+                <img src="iamges/plan_check.svg" alt="plan_check" />Works on All
+                Devices
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Connect Anyware
+                <img src="iamges/plan_check.svg" alt="plan_check" />Connect
+                Anyware
               </li>
             </ul>
-            <p class="item__price">$9 / <span class="item__price-reg">mo</span></p>
+            <p class="item__price">
+              $9 <span class="item__price-reg">/ mo</span>
+            </p>
             <button type="button" class="btn-plan">Select</button>
           </div>
           <div class="plan-item">
-            <img src="iamges/plan_item.svg" alt="plan_box">
+            <img src="iamges/plan_item.svg" alt="plan_box" />
             <h2 class="item__name">Premium Plan</h2>
             <ul class="item__list">
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Unlimited Bandwitch
+                <img src="iamges/plan_check.svg" alt="plan_check" />Unlimited
+                Bandwitch
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Encrypted Connection
+                <img src="iamges/plan_check.svg" alt="plan_check" />Encrypted
+                Connection
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Yes Traffic Logs
+                <img src="iamges/plan_check.svg" alt="plan_check" />Yes Traffic
+                Logs
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Works on All Devices
+                <img src="iamges/plan_check.svg" alt="plan_check" />Works on All
+                Devices
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Connect Anyware
+                <img src="iamges/plan_check.svg" alt="plan_check" />Connect
+                Anyware
               </li>
               <li class="item__list-text">
-                <img src="iamges/plan_check.svg" alt="plan_check">Get New Features
+                <img src="iamges/plan_check.svg" alt="plan_check" />Get New
+                Features
               </li>
             </ul>
-            <p class="item__price">$12 / <span class="item__price-reg">mo</span></p>
+            <p class="item__price">
+              $12 <span class="item__price-reg">/ mo</span>
+            </p>
             <button type="button" class="btn-plan">Select</button>
           </div>
         </div>
-    </div>
+      </div>
+    </section>
     <!-- Subscribe_plan/ -->
+    <!-- Map -->
+    <section class="plan map">
+      <div class="container plan__container">
+        <h1 class="map__title">Huge Global Network of Fast VPN</h1>
+        <p class="map__desc">
+          See
+          <span class="map__desc map__desc--medium">LaslesVPN</span> everywhere
+          to make it easier for you when you move locations.
+        </p>
+        <img src="iamges/map.svg" alt="map" />
+        <div class="sponsors">
+          <img src="iamges/netflix_logo.svg" alt="netflix" />
+          <img src="iamges/reddit_logo.svg" alt="reddit" />
+          <img src="iamges/amazon_logo.svg" alt="amazon" />
+          <img src="iamges/dis_logo.svg" alt="dis" />
+          <img src="iamges/spotify_logo.svg" alt="spotify" />
+        </div>
+      </div>
+    </section>
+    <!-- Map/ -->
   </body>
 </html>
